--- a/Source/1. Functional Programmingming/index.html
+++ b/Source/1. Functional Programmingming/index.html
@@ -18,87 +18,87 @@
 </head>
 <body>
     <div class="taskblock">
-        <span>
+        <div class="tasktext">
             1. Partial Application <br />
             Initial function f(x) =  a / b <br />
             Produce partial function hupebola f(x) = 1/x <br />
-        </span>
+        </div>
         <div class="taskresult">Not processed...</div>
     </div>
     <div class="taskblock">
-        <span>
+        <div class="tasktext">
             2. Currying <br />
             Initial function f(x) = a + b + c <br />
             Produce curry function curryFn();<br />
-        </span>
+        </div>
         <div class="taskresult">Not processed...</div>
     </div>
     <div class="taskblock">
-        <span>
+        <div class="tasktext">
             3. Linear Fold <br />
             <span class="data"></span><br />
             Produce sum of array elements.
-        </span>
+        </div>
         <div class="taskresult">Not processed...</div>
     </div>
     <div class="taskblock">
-        <span>
+        <div class="tasktext">
             4. Linear Unfold <br />
             Produce [0, 1, 1, 2, 3, 5, 8, 13, 21] fibonachi array<br />
-        </span>
+        </div>
         <div class="taskresult">Not processed...</div>
     </div>
     <div class="taskblock">
-        <span>
+        <div class="tasktext">
             5. Map <br />
             <span class="data"></span><br />
             Produce new array from element of old array using f(x) = x + 1
-        </span>
+        </div>
         <div class="taskresult">Not processed...</div>
     </div>
     <div class="taskblock">
-        <span>
+        <div class="tasktext">
             6. Filter <br />
             <span class="data"></span><br />
             Produce new array using condition f(x) = x > 4<br />
-        </span>
+        </div>
         <div class="taskresult">Not processed...</div>
     </div>
     <div class="taskblock">
-        <span>
+        <div class="tasktext">
             7. Average <br />
             <span class="data"></span><br />
-            Produce average result<br />
-        </span>
+            Produce average result of array elements<br />
+        </div>
         <div class="taskresult">Not processed...</div>
     </div>
 
     <div class="taskblock">
-        <span>
+        <div class="tasktext">
             8. Sum of Random numbers <br />
             Use linearUnfoldFn to generate array of 10 random numbers<br />
-            Use linearFoldFn to find out sumof this numbers<br />
-        </span>
+            Use linearFoldFn to find out sum of this numbers<br />
+        </div>
         <div class="taskresult">Not processed...</div>
     </div>
     <div class="taskblock">
-        <span>
+        <div class="tasktext">
             9. Find first element <br />
             <span class="data"></span><br />
             Search element using condition f(x) = x > 4 <br />
-        </span>
+        </div>
         <div class="taskresult">Not processed...</div>
     </div>
     <div class="taskblock">
-        <span>
+        <div class="tasktext">
             10. Lazy <br />
-        </span>
+        </div>
         <div class="taskresult">Not processed...</div>
     </div>
     <div class="taskblock">
-        <span>
+        <div class="tasktext">
             11. Memorization<br />
-        </span>
+        </div>
         <div class="taskresult">Not processed...</div>
     </div>
     <script type="text/javascript">
