--- a/Source/Logger/index.html
+++ b/Source/Logger/index.html
@@ -3,14 +3,15 @@
 <head>
     <title></title>
     <script type="text/javascript" src="js/utils.js"></script>
-    <script data-main="./js/logger/app" src="js/require.js"></script>
+    <script data-main="./js/logger/logger.js" src="js/require.js"></script>
 </head>
 <body>
     <script>
-        requirejs(['app'], function (app) {
-            app.log('bla bla bla');
-            app.log('bla bla bla', 'Window');
+        requirejs(['logger'], function (logger) {
+            logger.monitorEventAll(btnTest);
+            logger.monitorEventAll(btnTest, true);
         });
     </script>
+    <input type="button" value="test" id="btnTest"/>
 </body>
 </html>
